# diesel-sort-struct-fields

./: .env  CHANGELOG.md  Cargo.toml  README.md
migrations/2019-07-01-100524_create-users-table/: up.sql
src/: lib.rs  schema.rs
tests/compile_fail/: doesnt_allow_attributes.rs  doesnt_allow_attributes.stderr  not_allowed_on_enums.rs  not_allowed_on_enums.stderr  not_allowed_on_tuple_structs.rs  not_allowed_on_tuple_structs.stderr  not_allowed_on_unions.rs  not_allowed_on_unions.stderr  not_allowed_on_unit_structs.rs  not_allowed_on_unit_structs.stderr  sort_columns_doesnt_support_attributes.rs  sort_columns_doesnt_support_attributes.stderr  sort_columns_on_non_table_item.rs  sort_columns_on_non_table_item.stderr  sort_columns_on_non_table_macro.rs  sort_columns_on_non_table_macro.stderr
tests/compile_pass/: attributes_on_table_macro.rs  composite_primary_keys_on_tables.rs  does_not_break_things_that_are_not_broken.rs  optional_id_in_table.rs  sorts_columns_in_table_macro.rs  sorts_nullable_columns.rs  sorts_struct_fields.rs  supports_use_statements_in_table.rs
