[package]
authors = ["David Pedersen <david.pdrsn@gmail.com>"]
categories = []
description = "Macro to sort struct fields and `table!` columns to avoid subtle bugs"
documentation = "https://docs.rs/diesel-sort-struct-fields"
edition = "2018"
homepage = "https://github.com/davidpdrsn/diesel-sort-struct-fields"
keywords = ["database", "sql", "orm", "diesel"]
license = "MIT"
name = "diesel-sort-struct-fields"
readme = "README.md"
repository = "https://github.com/tonsser/diesel-sort-struct-fields.git"
version = "0.1.3"

[dependencies]
proc-macro2 = "^0.4"
quote = "^0.6"
syn = { version = "^0.15", features = ["full", "extra-traits"] }

[dev-dependencies]
diesel = { version = "^1", features = ["postgres"] }
diesel_full_text_search = "1.0.1"
trybuild = "1.0.6"

[lib]
proc-macro = true
